--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,7 @@
         <item>Reception</item>
     </string-array>
 
-
-        <!-- existing strings -->
-
-
+    <!-- Specialties -->
     <string-array name="specialties_array">
         <item>Select specialty...</item>
         <item>Cardiology</item>
@@ -21,37 +18,29 @@
         <item>General Practice</item>
     </string-array>
 
+    <!-- Specialists -->
+    <string-array name="specialists_array">
+        <item>Select specialist...</item>
+        <item>Dr. John Smith</item>
+        <item>Dr. Sarah Johnson</item>
+        <item>Dr. Michael Patel</item>
+        <item>Dr. Emily Williams</item>
+        <item>Dr. David Brown</item>
+    </string-array>
 
-
-    <!-- other strings -->
-        <string-array name="specialists_array">
-            <item>Dr. John Smith</item>
-            <item>Dr. Sarah Johnson</item>
-            <item>Dr. Michael Patel</item>
-            <item>Dr. Emily Williams</item>
-            <item>Dr. David Brown</item>
-        </string-array>
-
+    <!-- Clinics -->
     <string-array name="clinic_locations">
+        <item>Select clinic...</item>
         <item>North Clinic</item>
         <item>South Clinic</item>
         <item>East Clinic</item>
         <item>West Clinic</item>
     </string-array>
 
-
-
-
-
-
-
-
-
     <string name="app_name">HospiManagementApp</string>
-
-    <!-- Add this -->
     <string name="select_patient">Select Patient</string>
 </resources>
+
 
 
 
